added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -19,11 +20,13 @@
           <li>The body element represents the visible content shown to the user</li>
         </ul>
       </section>
-      
+
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Eneter your CSS notes here</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>The wild card symbol, or *. In this rule, we have declared that ALL of the elements on the page will have the style properties "margin" and "padding" set as 0.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
         </ul>
       </section>
 
