--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         <h2>Javascript</h2>
         <ul>
           <li>An array is a single variable that is used to hold a group of data.</li>
-          <li></li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes a code in a script.</li>
         </ul>
       </section>
 
